syntax = "proto3";

package order;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "OrderProto";

message OrderRequest {
  int32 productId = 1;
}

message OrderResponse {
  string productPrice = 1;
}

service OrderService {
  rpc ProductPrice (OrderRequest) returns (OrderResponse);
}
